Adiciona .gitignore completo para Maven e IDEs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=tatiart
 server.port=${PORT:8080}
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
+# PostgreSQL (Railway)
+spring.datasource.url=jdbc:postgresql://centerbeam.proxy.rlwy.net:25509/railway
+spring.datasource.username=postgres
+spring.datasource.password=NMocFmFBzYqMYtjEySHXiJffaDhjBFiH
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA e Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# (Opcional) Mostrar SQL gerado no console
+spring.jpa.show-sql=true
