Corrige URL do banco PostgreSQL para Railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@ spring.application.name=tatiart
 server.port=${PORT:8080}
 
 # PostgreSQL (Railway)
-spring.datasource.url=jdbc:postgresql://centerbeam.proxy.rlwy.net:25509/railway
+spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:25509/railway
 spring.datasource.username=postgres
 spring.datasource.password=NMocFmFBzYqMYtjEySHXiJffaDhjBFiH
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA e Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-# (Opcional) Mostrar SQL gerado no console
 spring.jpa.show-sql=true
+
+# Pool de conex\u00f5es (opcional)
+spring.datasource.hikari.maximum-pool-size=10
