--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=tatiart
 server.port=${PORT:8080}
 
 # PostgreSQL (Railway)
-spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:25509/railway
+spring.datasource.url=jdbc:postgresql://centerbeam.proxy.rlwy.net:25509/railway
 spring.datasource.username=postgres
 spring.datasource.password=NMocFmFBzYqMYtjEySHXiJffaDhjBFiH
 spring.datasource.driver-class-name=org.postgresql.Driver
