--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,27 @@
 spring.application.name=tatiart
-server.port=${PORT:8080}
+server.port=8080
 
-# PostgreSQL (Railway)
-spring.datasource.url=jdbc:postgresql://centerbeam.proxy.rlwy.net:25509/railway
-spring.datasource.username=postgres
-spring.datasource.password=NMocFmFBzYqMYtjEySHXiJffaDhjBFiH
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Banco de dados H2 PERSISTENTE em arquivo
+spring.datasource.url=jdbc:h2:file:./data/tatiartdb;DB_CLOSE_ON_EXIT=FALSE;INIT=CREATE SCHEMA IF NOT EXISTS TATIART\\;SET SCHEMA TATIART
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=tatiart
+spring.datasource.password=tatiart
 
-# JPA e Hibernate
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=TATIART
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 
-# Pool de conex\u00f5es (opcional)
-spring.datasource.hikari.maximum-pool-size=10
+# Console H2 (acesso via navegador)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
+
+# Thymeleaf
+spring.thymeleaf.cache=false
+
+# Upload de arquivos
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
